<resources>
    <string name="app_name">WPM</string>

    <string name="dev_phone">+2634754709</string>
    <string name="creds">Special thanks goes to Prosper Jambo for his assistance. The Spoken Word Ministry - Belvedere Projector Team manages and edits this application.</string>


    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>

    <string name="sign_up_or_label"> Sign Up </string>
    <string name="log_in_or_label"> Log In </string>

    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>

    <string name="or"> Or </string>
    <string name="pay_number">Pay Number</string>
    <string name="fname">Full Name</string>
    <string name="dept">Department</string>
    <string name="jtitle">Job Title</string>
    <string name="text_login">Login</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="isRTL">false</string>
    <string name="network_msg">No Network Connection.</string>
    <string name="no_data_found">No data found.</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="text_title">WPM</string>
    <string name="hello">Hello,</string>
    <string name="text_accounts">List</string>

    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>

    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="forgot">Reset Your Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="verse1">2 Tim 2: 2 The things which you have heard from me in the presence of many witnesses, entrust these to faithful men who will be able to teach others also.</string>
    <string name="verse2">Matthew  28:19 Go therefore and make disciples of all the nations, baptizing them in the name of the Father and the Son and the Holy Spirit, 20 teaching them to observe all that I commanded you; and lo, I am with you always, even to the end of the age.”</string>
    <string name="purpose">Purpose\n Helping to fulfill the Great Commission in the power of the Holy Spirit by winning people to faith in Jesus Christ, building them in their faith and sending them to win and build others; and helping the Body of Christ do evangelism and discipleship.</string>
    <string name="mission">Our Mission\n Win, build, and send Christ-centered multiplying disciples who launch spiritual movements.</string>
    <string name="vision">Our Vision\n Movements everywhere so that everyone knows someone who truly follows Jesus.</string>
    <string name="values">Our Values\n Faith, Growth, and Fruitfulness.</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_default_title">WPM</string>
    <string name="empl_name">Vincent Guyo</string>
    <string name="phone">Phone Number</string>
    <string name="extension">Extension</string>
    <string name="addr">Home Address</string>

    <string name="url_github">https://github.com/%s</string>
    <string name="url_bitbucket">https://bitbucket.org/%s</string>

    <string name="url_instagram_website">http://instagram.com/%s</string>
    <string name="uri_instagram_app">http://instagram.com/_u/%s</string>
    <string name="id_instagram_app">com.instagram.android</string>

    <string name="url_facebook_website">https://www.facebook.com/%s</string>
    <string name="uri_facebook_app">fb://page/%s</string>
    <string name="id_facebook_app">com.facebook.katana</string>

    <string name="url_twitter_website">https://twitter.com/%s</string>
    <string name="uri_twitter_app">twitter://user?screen_name=%s</string>
    <string name="id_twitter_app">com.twitter.android</string>

    <string name="url_google_plus_website">https://plus.google.com/%s</string>
    <string name="uri_google_plus_app">https://plus.google.com/%s</string>
    <string name="id_google_plus_app">com.google.android.apps.plus</string>

    <string name="url_google_play_store_developer_page">https://play.google.com/store/apps/dev?id=%s</string>
    <string name="url_youtube_user_website">https://www.youtube.com/user/%s</string>
    <string name="url_youtube_channel_website">https://www.youtube.com/channel/%s</string>

    <string name="url_linkedin_website">https://www.linkedin.com/in/%s</string>
    <string name="uri_linkedin_app">linkedin://profile/%s</string>
    <string name="id_linkedin_app">com.linkedin.android</string>

    <string name="uri_skype_app">skype:%s</string>
    <string name="id_skype_app">com.skype.raider</string>

    <string name="uri_add_contact">tell:%s</string>
    <string name="uri_play_store_app_website">https://play.google.com/store/apps/details?id=%s</string>
    <string name="uri_play_store_app">market://details?id=%s</string>
    <string name="uri_play_store_apps_list">market://search?q=pub:%s</string>
    <string name="uri_play_store_apps_list_website">https://play.google.com/store/search?q=%s</string>
    <string name="github">GitHub</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="bitbucket">Bitbucket</string>
    <string name="google">Google</string>
    <string name="google_plus">Google +</string>
    <string name="google_play_store">Play Store</string>
    <string name="google_play_games">Play Games</string>
    <string name="linkedin">LinkedIn</string>
    <string name="whastapp">Whatsapp</string>
    <string name="skype">Skype</string>
    <string name="youtube">Youtube</string>
    <string name="android">Android</string>
    <string name="dribbble">Dribbble</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="version">Version %s</string>
    <string name="error">Error</string>
    <string name="rate_five_stars">Rate this app 5 stars</string>
    <string name="more_apps">More apps from me</string>
    <string name="share_app">Share this app</string>
    <string name="update_app">Update this app</string>
    <string name="feedback_app">Give me a feedback</string>
    <string name="introduce_app">Introduce the app</string>
    <string name="changelog">ChangeLog</string>
    <string name="license">License</string>
    <string name="remove_ads">Remove ads</string>
    <string name="donate">Donate</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy Policy</string>



</resources>
